only refactoring and small changes in the configuration